--- a/helloworld/nginx.conf
+++ b/helloworld/nginx.conf
@@ -16,8 +16,8 @@ http {
             js_content hello;
         }
         
-        location ~ \.*$ {
-            js_content header;
+        location /params {
+            js_content params;
         }
     }
 }
